--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -28,6 +28,22 @@ aside {
   display: block;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
+/* Avoid Chrome to see Safari hack */
+@supports (-webkit-touch-callout: none) {
+  body {
+    /* The hack for Safari */
+    min-height: -webkit-fill-available;
+  }
+}
+
+body {
+  min-height: 100vh;
+}
+
 html,
 body {
   height: 100%;
