--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --vh: 1vh;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -42,6 +46,7 @@ html {
 
 body {
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
 html,
