--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -170,7 +170,7 @@ body {
 
 .city__content.city_map {
   height: calc(100vh - 134px);
-  height: calc(100svh - 134px);
+  height:  calc(var(--vh, 1vh) * 100 - 134px);
 }
 
 .city-col {
