--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -5402,7 +5402,7 @@ body.scroll_fixed {
 
   .city__content.city_map {
     height: calc(100vh - 134px);
-    height: calc(100svh - 134px);
+    height:  calc(var(--vh, 1vh) * 100 - 134px);
     min-height: -webkit-fill-available;
     overflow: hidden;
   }
