--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -5418,6 +5418,11 @@ body.scroll_fixed {
     overflow: hidden;
   }
 
+  .city__content.city_map.safari {
+    height: calc(100vh - 174px);
+    height:  calc(var(--vh, 1vh) * 100 - 174px);
+  }
+
   .city-col {
     padding-top: 23px;
   }
