--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -5420,7 +5420,7 @@ body.scroll_fixed {
 
   .city__content.city_map.safari {
     height: calc(100vh - 174px);
-    height:  calc(var(--vh, 1vh) * 100 - 174px);
+    height: calc(var(--vh, 1vh) * 100 - 251px) !important;
   }
 
   .city-col {
