--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -7199,6 +7199,8 @@ body.scroll_fixed {
 @media (max-width: 539px) {
   .object__photo-popup-block {
     height: auto;
+    max-height: 100%;
+    overflow: auto;
   }
 }
 
