--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -203,8 +203,34 @@ body {
 .city-col__title {
   line-height: 24px;
   margin-right: 10px;
+  flex: 1 0 40%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  line-height: normal;
+  width: 100%;
 }
 
+@media (max-width: 1299px) {
+  .city-col__title {
+    flex: 1 0 100%;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 1003px) {
+  .city-col__title {
+    flex: 1 0 40%;
+  }
+}
+
+@media (max-width: 899px) {
+  .city-col__title {
+    margin-bottom: 0px;
+    flex: 1 0 40%;
+  }
+  
+}
 .city-col__subtitle {
   color: #c2c2c2;
   flex: 0 0 100%;
@@ -4943,16 +4969,14 @@ body.scroll_fixed {
 
 @media (max-width: 899px) {
   .city-col__top {
-    flex-direction: column;
+    /* flex-direction: column; */
   }
 
   .city-col__subtitle {
-    margin-top: 14px;
-    margin-bottom: 29px;
+    margin-bottom: 20px;
   }
 
   .city-col__filter {
-    order: 1;
   }
 
   .city-col__content {
@@ -5253,6 +5277,20 @@ body.scroll_fixed {
 
   .search-nav__find {
     flex: 1;
+  }
+}
+
+@media (max-width: 767px) {
+  .city-col__title {
+  }
+  .city-col__top {
+    flex-direction: column;
+  }
+  .city-col__subtitle {
+    margin-top: 15px;
+  }
+  .city-col__filter {
+    order: 1;
   }
 }
 
@@ -6207,7 +6245,7 @@ body.scroll_fixed {
 
 @media (max-width: 1790px) and (min-width: 1004px) {
   .city-col__filter {
-    order: 1;
+    /* order: 1; */
   }
 }
 
@@ -7454,4 +7492,29 @@ body.scroll_fixed {
     font-weight: bold;
     margin-bottom: 10px;
   }
+}
+
+.city__slide .quantity {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 19.7178px;
+  line-height: 23px;
+  color: #FFFFFF;
+  z-index: 2;
+  white-space: nowrap;
+}
+
+.city__slide.last-slide::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.8);
+  opacity: 0.66;
+  border-radius: 4.48131px;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+  position: absolute;
 }
