--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -3837,7 +3837,7 @@ body.scroll_fixed {
   cursor: pointer;
   z-index: 10;
   position: relative;
-  padding: 11px 0px 10px 17px;
+  padding: 11px 36px 10px 17px;
   font-size: 15px;
   border-left: 2px solid #508cfa;
   border-top: 2px solid #508cfa;
@@ -3845,6 +3845,14 @@ body.scroll_fixed {
   transition: 0.1s;
 }
 
+@media (max-width: 539px) {
+  .search-nav__list-item-title {
+    padding: 11px 23px 10px 17px;
+  }
+  .search-nav__list-item_arrow::after {
+    right: 6px;
+  }
+}
 .search-nav__item-dropdown {
   background: #ffffff;
   border-radius: 5px 0px 5px 5px;
@@ -4293,7 +4301,7 @@ body.scroll_fixed {
 }
 
 .search__filter-more {
-  max-width: 523px;
+  /* max-width: 523px; */
 }
 
 .search__filter-square-title {
@@ -6056,7 +6064,7 @@ body.scroll_fixed {
   }
 
   .search__filter-more .more-dropdown__peculiarities-item {
-    flex: 0 0 49%;
+    flex: 1 0 49%;
   }
 
   .search__filter-view .more-dropdown__view-item {
@@ -7043,6 +7051,11 @@ body.scroll_fixed {
 
 
   }
+}
+.kompleks__layout-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .kompleks__layout-img {
   max-width: 100px;
