--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -7303,7 +7303,7 @@ body.scroll_fixed {
 }
 
 .object__photo.active {
-  display: flex;
+  display: block;
 }
 
 .object__photo:before {
@@ -7323,7 +7323,7 @@ body.scroll_fixed {
   justify-content: center;
   align-items: center;
   padding: 30px 53px;
-  min-height: 500px;
+  min-height: 100%;
 }
 
 .object__photo-content {
@@ -7510,6 +7510,7 @@ body.scroll_fixed {
   width: 100% !important;
   max-width: 100% !important;
   padding: 29px 55px;
+  display: flex;
 }
 .object__swiper-nav {
   position: absolute;
