--- a/public/lands/css/style.css
+++ b/public/lands/css/style.css
@@ -2199,7 +2199,7 @@ ul.list_point li {
 
 .gallery__overlap {
   position: absolute;
-  width: 19.5%;
+  width: 66px;
   height: 100%;
   top: 0;
 }
@@ -2214,6 +2214,7 @@ ul.list_point li {
   left: 0;
   width: 100%;
   height: 100%;
+  display: none;
 }
 
 .gallery__overlap_left {
@@ -5297,7 +5298,7 @@ input[type='number'] {
     margin: 0 auto;
     flex: 0 0 340px;
   }
-  
+
   .popup__house-pic  {
     margin: 0 auto 8px;
   }
@@ -5415,7 +5416,7 @@ input[type='number'] {
     padding: 0px;
     height: auto;
   }
-  
+
   .popup-gallery .popup__content {
     background: #fff;
     padding: 0px;
@@ -5492,7 +5493,7 @@ input[type='number'] {
     gap: 15px;
     justify-content: space-between;
   }
-  
+
   .popup-building .preview__form {
     flex: 0 0 100%;
     margin: 0 auto;
